ocs_ci/templates/workloads/couchbase/server/admissionDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator-admission
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: couchbase-operator-admission
    spec:
      containers:
      - args:
        - --logtostderr
        - --stderrthreshold
        - "0"
        - --tls-cert-file
        - /var/run/secrets/couchbase.com/couchbase-operator-admission/tls-cert-file
        - --tls-private-key-file
        - /var/run/secrets/couchbase.com/couchbase-operator-admission/tls-private-key-file
        command:
        - couchbase-operator-admission
        image: registry.connect.redhat.com/couchbase/admission-controller:1.2.1-1
        name: couchbase-operator-admission
        ports:
        - containerPort: 8443
          name: https
        resources: {}
        volumeMounts:
        - mountPath: /var/run/secrets/couchbase.com/couchbase-operator-admission
          name: couchbase-operator-admission
          readOnly: true
      imagePullSecrets:
      - name: REDHAT_CONTAINER_REGISTRY_PULL_SECRET
      serviceAccountName: couchbase-operator-admission
      volumes:
      - name: couchbase-operator-admission
        secret:
          secretName: couchbase-operator-admission
status: {}
