ocs_ci/templates/workloads/couchbase/server/operator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: couchbase-operator
  namespace: couchbase-operator-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: couchbase-operator
    spec:
      containers:
      - args:
        - --pod-create-timeout=10m
        - --create-crd=false
        command:
        - couchbase-operator
        image: registry.connect.redhat.com/couchbase/operator:1.2.1-1
        name: couchbase-operator
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          failureThreshold: 20
          httpGet:
            path: /readyz
            port: http
          initialDelaySeconds: 3
          periodSeconds: 3
        resources: {}
      serviceAccountName: couchbase-operator
status: {}
