ocs_ci/templates/workloads/couchbase/server/admissionService.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
  namespace: default

spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: couchbase-operator-admission
status:
  loadBalancer: {}
