ocs_ci/templates/workloads/couchbase/server/MutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
  namespace: default

webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lSQUprNTcyd09TSFhDaDZYRWVUWkNPQW93RFFZSktvWklodmNOQVFFTEJRQXcKS2pFb01DWUdBMVVFQXhNZlkyOTFZMmhpWVhObExXOXdaWEpoZEc5eUxXRmtiV2x6YzJsdmJpQkRRVEFlRncweApPVEE0TWpJeE9EVTJNVEJhRncweU9UQTRNVGt4T0RVMk1UQmFNQ294S0RBbUJnTlZCQU1USDJOdmRXTm9ZbUZ6ClpTMXZjR1Z5WVhSdmNpMWhaRzFwYzNOcGIyNGdRMEV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUUNZTko1L3JVWlZLZ0JNQW9xVFZrbVNpL0pET0hEMEppd2dGTUwxSDliTTBYcHlrTTNVS2l1ZApZcGhFQzVyKzd4YX [...]
    service:
      name: couchbase-operator-admission
      namespace: default
      path: /couchbaseclusters/mutate
  name: couchbase-operator-admission.default.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
