ocs_ci/templates/workloads/couchbase/server/admission.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator-admission
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: couchbase-operator-admission
    spec:
      containers:
      - args:
        - --logtostderr
        - --stderrthreshold
        - "0"
        - --tls-cert-file
        - /var/run/secrets/couchbase.com/couchbase-operator-admission/tls-cert-file
        - --tls-private-key-file
        - /var/run/secrets/couchbase.com/couchbase-operator-admission/tls-private-key-file
        command:
        - couchbase-operator-admission
        image: registry.connect.redhat.com/couchbase/admission-controller:1.2.1-1
        name: couchbase-operator-admission
        ports:
        - containerPort: 8443
          name: https
        resources: {}
        volumeMounts:
        - mountPath: /var/run/secrets/couchbase.com/couchbase-operator-admission
          name: couchbase-operator-admission
          readOnly: true
      imagePullSecrets:
      - name: data/qe-test-pull-secret
      serviceAccountName: couchbase-operator-admission
      volumes:
      - name: couchbase-operator-admission
        secret:
          secretName: couchbase-operator-admission
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: couchbase-operator-admission
status:
  loadBalancer: {}

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lSQUprNTcyd09TSFhDaDZYRWVUWkNPQW93RFFZSktvWklodmNOQVFFTEJRQXcKS2pFb01DWUdBMVVFQXhNZlkyOTFZMmhpWVhObExXOXdaWEpoZEc5eUxXRmtiV2x6YzJsdmJpQkRRVEFlRncweApPVEE0TWpJeE9EVTJNVEJhRncweU9UQTRNVGt4T0RVMk1UQmFNQ294S0RBbUJnTlZCQU1USDJOdmRXTm9ZbUZ6ClpTMXZjR1Z5WVhSdmNpMWhaRzFwYzNOcGIyNGdRMEV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUUNZTko1L3JVWlZLZ0JNQW9xVFZrbVNpL0pET0hEMEppd2dGTUwxSDliTTBYcHlrTTNVS2l1ZApZcGhFQzVyKzd4YX [...]
    service:
      name: couchbase-operator-admission
      namespace: default
      path: /couchbaseclusters/mutate
  name: couchbase-operator-admission.default.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lSQUprNTcyd09TSFhDaDZYRWVUWkNPQW93RFFZSktvWklodmNOQVFFTEJRQXcKS2pFb01DWUdBMVVFQXhNZlkyOTFZMmhpWVhObExXOXdaWEpoZEc5eUxXRmtiV2x6YzJsdmJpQkRRVEFlRncweApPVEE0TWpJeE9EVTJNVEJhRncweU9UQTRNVGt4T0RVMk1UQmFNQ294S0RBbUJnTlZCQU1USDJOdmRXTm9ZbUZ6ClpTMXZjR1Z5WVhSdmNpMWhaRzFwYzNOcGIyNGdRMEV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUUNZTko1L3JVWlZLZ0JNQW9xVFZrbVNpL0pET0hEMEppd2dGTUwxSDliTTBYcHlrTTNVS2l1ZApZcGhFQzVyKzd4YX [...]
    service:
      name: couchbase-operator-admission
      namespace: default
      path: /couchbaseclusters/validate
  name: couchbase-operator-admission.default.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
admissionConfig:
  pluginConfig:
   MutatingAdmissionWebhook:
     configuration:
       apiVersion: v1
       disable: false
       kind: DefaultAdmissionConfig
   ValidatingAdmissionWebhook:
     configuration:
       apiVersion: v1
       disable: false
       kind: DefaultAdmissionConfig
